Change readme and config

--- a/src/main/resources/config/admin.example.config.json
+++ b/src/main/resources/config/admin.example.config.json
@@ -1,12 +1,12 @@
 {
   "database" : {
-    "connection_url": "jdbc:mysql://127.0.0.1/billingwarnetreal?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Jakarta",
-    "name": "billingwarnetreal",
-    "username": "root",
-    "password": "password"
+    "connection_url": "jdbc:mysql://127.0.0.1/{database_name}?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Jakarta",
+    "name": "{database_name}",
+    "username": "{database_username}",
+    "password": "{database_password}"
   },
   "socket_server": {
-    "host" : "localhost",
-    "port" :8000
+    "host" : "{socket_server_host}",
+    "port" : 8000
   }
 }
